[gd_scene load_steps=15 format=2]

[ext_resource path="res://Character/Art/blue_char.png" type="Texture" id=1]
[ext_resource path="res://Character/player.gd" type="Script" id=2]
[ext_resource path="res://UI/HealthBar/health_bar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Audio/Small Fireball-SoundBible.com-1381880822.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 80, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 3.49288

[node name="Player" type="KinematicBody2D" groups=[
"Friendly",
"Player",
]]
collision_mask = 2
script = ExtResource( 2 )
speed = 65.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
frames = SubResource( 9 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"Friendly",
]]
position = Vector2( 0.128517, -4.50207 )
shape = SubResource( 10 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
visible = false
margin_top = -19.9434
margin_bottom = -3.9434

[node name="PathTimer" type="Timer" parent="."]

[node name="Cooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FireballSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
[connection signal="timeout" from="PathTimer" to="." method="_on_PathTimer_timeout"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
